--- a/camaar/app/assets/stylesheets/home.css
+++ b/camaar/app/assets/stylesheets/home.css
@@ -217,14 +217,20 @@ header {
     transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
-    width: 800px; /* Ajuste conforme necessário */
-    height: 800px;
-    padding: 20px;
+    max-width: 50%; /* Ajuste para responsividade */
+    max-height: 90%; /* Ajuste para responsividade */
+    border-radius: 10px;
+    box-sizing: border-box;
+    overflow-y: auto; /* Adiciona rolagem vertical, se necessário */
 }
 
 #popup-upload .popup-content {
     position: relative;
+    top: 00%;
+    left: 00%;
+    max-width: 90%; /* Ajuste para responsividade */
+    max-height: 90%; /* Ajuste para responsividade */
+
 }
 
 #popup-upload .close-popup {
@@ -238,43 +244,60 @@ header {
 
 .popup-btn {
     display: block;
-    margin-top: 10px;
-    padding: 8px 12px;
+    margin-top: 20px;
+    padding: 10px 15px;
     background-color: #007bff;
     color: white;
     border: none;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    font-size: 14px;
-    border-radius: 4px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .popup-btn:hover {
     background-color: #0056b3;
 }
 
+.file-input-container {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+
+.file-input-container h3 {
+    margin-top: 0;
+}
+
 .file-input {
     margin-top: 10px;
 }
 
-.file-input input[type=file] {
-    display: none;
-}
-
 .file-input label {
-    display: block;
-    padding: 8px 12px;
+    display: inline-block;
+    padding: 10px 15px;
     background-color: #28a745;
     color: white;
     border: none;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
-    font-size: 14px;
-    border-radius: 4px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .file-input label:hover {
     background-color: #218838;
 }
+
+.file-name {
+    display: inline-block;
+    margin-left: 10px;
+    font-size: 14px;
+    color: #555;
+}
+
