--- a/camaar/app/assets/stylesheets/criar_tempelete.css
+++ b/camaar/app/assets/stylesheets/criar_tempelete.css
@@ -6,15 +6,15 @@ body {
     padding: 0;
 }
 
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
+/*.container {*/
+/*    max-width: 800px;*/
+/*    margin: 20px auto;*/
+/*    padding: 20px;*/
+/*    background-color: #fff;*/
+/*    border: 1px solid #ddd;*/
+/*    border-radius: 5px;*/
+/*    box-shadow: 0 0 10px rgba(0,0,0,0.1);*/
+/*}*/
 
 .form-group {
     margin-bottom: 10px;
@@ -25,7 +25,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="text"],
+.text-input,
 select,
 textarea {
     width: calc(100% - 10px);
