--- a/camaar/app/views/pages/criar_templete.html.erb
+++ b/camaar/app/views/pages/criar_templete.html.erb
@@ -12,11 +12,11 @@
     <form id="nova-lista">
         <div class="form-group">
             <label for="nome-lista">Nome do Formulário:</label>
-            <input type="text" id="nome-lista" name="nome-lista" required>
+            <input class="text-input" type="text" id="nome-lista" name="nome-lista" required>
         </div>
         <div class="form-group">
             <label for="pergunta">Texto da pergunta:</label>
-            <input type="text" id="pergunta" name="pergunta" required>
+            <input class='text-input' type="text" id="pergunta" name="pergunta" required>
         </div>
         <div class="form-group">
             <label for="tipo-pergunta">Tipo de Pergunta:</label>
@@ -46,11 +46,11 @@
     <form id="edicao-lista">
         <div class="form-group">
             <label for="nome-edicao-lista">Nome do Formulário:</label>
-            <input type="text" id="nome-edicao-lista" name="nome-edicao-lista" required disabled>
+            <input class="text-input" type="text" id="nome-edicao-lista" name="nome-edicao-lista" required disabled>
         </div>
         <div class="form-group">
             <label for="pergunta-edicao">Texto da pergunta:</label>
-            <input type="text" id="pergunta-edicao" name="pergunta-edicao" required disabled>
+            <input class="text-input" type="text" id="pergunta-edicao" name="pergunta-edicao" required disabled>
         </div>
         <div class="form-group">
             <label for="tipo-pergunta-edicao">Tipo de Pergunta:</label>
