Adição de um Breadcrumb para o header

--- a/camaar/app/views/pages/avaliacoes.erb
+++ b/camaar/app/views/pages/avaliacoes.erb
@@ -7,21 +7,8 @@
     <title>Avaliações</title>
   </head>
   <body>
-    <header>
-      <div class="menu">
-        <span class="menu-icon" id="menu-icon">&#9776;</span>
-        <span class="title" id="title"></span>
-      </div>
+    <%= render 'layouts/header' %>
 
-      <div class="pesquisar-profile">
-        <%= image_tag 'lupa_pesquisa.svg', class: 'lupa', id: 'Pesquisar' %>
-        <input type="text" id="campo_pesquisar" name="campo_de_pesquisar">
-      </div>
-
-      <div class="user-icon">
-        <%= image_tag 'user_img.svg', class: 'img_user', id: 'Img_user' %>
-      </div>
-    </header>
     <div class="cards-container">
       <% @valor.each do %>
         <div class="card-template" id="card-0" onclick=location.href='avaliacoes/1'>
