--- a/camaar/app/views/layouts/_header.erb
+++ b/camaar/app/views/layouts/_header.erb
@@ -4,6 +4,10 @@
     <span class="title" id="title"></span>
   </div>
 
+  <div class="grow">
+    <h3 class="font-medium text-2xl"><%= @breadcrumb %></h3>
+  </div>
+
   <div class="pesquisar-profile">
     <%= image_tag 'lupa_pesquisa.svg', class: 'lupa', id: 'Pesquisar' %>
     <input type="text" id="campo_pesquisar" name="campo_de_pesquisar">
