--- a/camaar/app/views/pages/avaliacoes.erb
+++ b/camaar/app/views/pages/avaliacoes.erb
@@ -11,7 +11,7 @@
 
     <div class="cards-container">
       <% @valor.each do %>
-        <div class="card-template" id="card-0" onclick=location.href='avaliacoes/1'>
+        <div class="card-template" id="card-0" onclick=location.href='1'>
           <div class="info-materia">
             <h3>Nome da matéria</h3>
             <p>semestre</p>
