Mudança na cor do checkbox da página de envio de formulários

--- a/camaar/app/views/pages/gerenciamento.erb
+++ b/camaar/app/views/pages/gerenciamento.erb
@@ -36,7 +36,7 @@
                 <th class="w-1/4">Código</th>
               </tr>
               <tr class="border-t-2">
-                <td class="p-3 pr-2"><input type="checkbox"></td>
+                <td class="p-3 pr-2"><input checked type="checkbox" class="appearance-none text-green-500 rounded-md"></td>
                 <td class="p-3 pl-0">Matéria</td>
                 <td class="p-3 text-center">2024.1</td>
                 <td class="p-3 text-center">CIC001</td>
