--- a/camaar/app/views/pages/recuperar_senha.html.erb
+++ b/camaar/app/views/pages/recuperar_senha.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <div id="login_user">
       <h1>Redefinir Senha</h1>
       <% if flash[:alert].present? %>
-        <div class="bottom-alert alert">
+        <div class="alert">
           <%= flash[:alert] %>
         </div>
       <% end %>
