Correção do redicionamento no header e cards

--- a/camaar/app/views/layouts/_header.erb
+++ b/camaar/app/views/layouts/_header.erb
@@ -20,7 +20,7 @@
 
 <div id="sidebar" class="sidebar">
   <a href="#" class="closebtn" id="closebtn">&times;</a>
-  <%= link_to "Avaliações", "#", id: "avaliacoes-btn" %>
-  <%= link_to "Gerenciamento", "#", id: "gerenciamento-btn" %>
+  <%= link_to "Avaliações", "/avaliacoes", id: "avaliacoes-btn" %>
+  <%= link_to "Gerenciamento", "/gerenciamento", id: "gerenciamento-btn" %>
 </div>
 <%= javascript_include_tag('header.js') %>
